--- a/index.html
+++ b/index.html
@@ -124,19 +124,20 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/viviruiz88/porfolioprojects/blob/main/Arco%20V2.sql" target="_blank" class="button">VER PROYECTO</a></li>
 									</ul>
-								<!--
+								
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date"></span>
+										<h2><a href="images/CVVivianaRuiz.pdf" target="_blank" >Sobre mi
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="images/CVVivianaRuiz.pdf" target="_blank" class="image fit"><img src="images/portada-cv.jpeg" alt="" /></a>
+									<p>Puedes ver mi Curriculum Vitae actualizado.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="images/CVVivianaRuiz.pdf" target="_blank" class="button">Descargar PDF</a></li>
 									</ul>
+									<!--
 								</article>
 								<article>
 									<header>
