--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="images/CVVivianaRuiz.pdf" target="_blank" >Sobre mi<br/>&nbsp;
+										<h2><a href="images/CVVivianaRuiz.pdf" target="_blank" >Sobre mi<br/>&nbsp;<br/>
 										</a></h2>
 									</header>
 									<a href="images/CVVivianaRuiz.pdf" target="_blank" class="image fit"><img src="images/portada-cv.jpeg" alt="" /></a>
