--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://github.com/viviruiz88/porfolioprojects/blob/main/Arco%20V2.sql" target="_blank" ></a>Limpieza y exploración de datos<br />
+										<h2><a href="https://github.com/viviruiz88/porfolioprojects/blob/main/Arco%20V2.sql" target="_blank" >Limpieza y exploración de datos<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/viviruiz88/porfolioprojects/blob/main/Arco%20V2.sql" target="_blank" class="image fit"><img src="images/portada-sql.jpeg" alt="" /></a>
-									<p>Utilicé SQL para limpiar y explorar el set de datos para el proyecto</p>
+									<p>Utilicé SQL para limpiar y explorar el set de datos para el proyecto.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/viviruiz88/porfolioprojects/blob/main/Arco%20V2.sql" target="_blank" class="button">VER PROYECTO</a></li>
 									</ul>
@@ -133,7 +133,7 @@
 										</a></h2>
 									</header>
 									<a href="images/CVVivianaRuiz.pdf" target="_blank" class="image fit"><img src="images/portada-cv.jpeg" alt="" /></a>
-									<p>Puedes ver mi Curriculum Vitae actualizado.</p>
+									<p>Puedes ver mi Curriculum Vitae actualizado.<br/>&nbsp;<br/></p>
 									<ul class="actions special">
 										<li><a href="images/CVVivianaRuiz.pdf" target="_blank" class="button">Descargar PDF</a></li>
 									</ul>
