--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<article class="post featured">
 								<header class="major">
 								
-									<h2><a href="https://app.powerbi.com/reportEmbed?reportId=06d65fed-56bd-4ef5-be58-cbc5db1e7b7b&autoAuth=true&ctid=1ad86374-09ae-40c1-8eef-662b207a93ff&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXBhYXMtMS1zY3VzLXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9" target="_blank" >PROYECTO ARCO<br />
+									<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiY2JjYzg0NWMtNTc1MC00NzM1LThjYmItOTgwYjk3N2MyY2Y1IiwidCI6IjFhZDg2Mzc0LTA5YWUtNDBjMS04ZWVmLTY2MmIyMDdhOTNmZiJ9&pageName=ReportSection05bc72f2d873e51ac5e5" target="_blank" >PROYECTO ARCO<br />
 									</a></h2>
 									<p>En base a los datos de la compañía, se analiza la morbilidad del personal activo dentro de la organización, así como su implicación financiera sobre cada razón social.
                                         Monitoreo de: 
@@ -105,9 +105,9 @@
 	Mientras que Detalle de Gastos, brinda información sobre el padecimiento más costoso en el período, los 5 principales con gasto acumulado más alto y los 5 con mayor recurrencia y su costo acumulado.</p>
 </div>
 								
-								<a href="https://app.powerbi.com/reportEmbed?reportId=06d65fed-56bd-4ef5-be58-cbc5db1e7b7b&autoAuth=true&ctid=1ad86374-09ae-40c1-8eef-662b207a93ff&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXBhYXMtMS1zY3VzLXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9" target="_blank" class="image main"><img src="images/portadaarco.png" alt="" /></a>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiY2JjYzg0NWMtNTc1MC00NzM1LThjYmItOTgwYjk3N2MyY2Y1IiwidCI6IjFhZDg2Mzc0LTA5YWUtNDBjMS04ZWVmLTY2MmIyMDdhOTNmZiJ9&pageName=ReportSection05bc72f2d873e51ac5e5" target="_blank" class="image main"><img src="images/portadaarco.gif" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://app.powerbi.com/reportEmbed?reportId=06d65fed-56bd-4ef5-be58-cbc5db1e7b7b&autoAuth=true&ctid=1ad86374-09ae-40c1-8eef-662b207a93ff&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXBhYXMtMS1zY3VzLXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9" target="_blank" class="button large">Ver proyecto</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiY2JjYzg0NWMtNTc1MC00NzM1LThjYmItOTgwYjk3N2MyY2Y1IiwidCI6IjFhZDg2Mzc0LTA5YWUtNDBjMS04ZWVmLTY2MmIyMDdhOTNmZiJ9&pageName=ReportSection05bc72f2d873e51ac5e5" target="_blank" class="button large">Ver proyecto</a></li>
 								</ul> 
 							</article>	
 						<!-- Posts -->
@@ -231,7 +231,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Viviana Ruiz</li></ul>
 					</div>
 
 			</div>
