--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div id="intro">
 						<h1>Viviana Ruiz 
 						</h1>
-						Data Analytics: Power BI, SQL. <br />
+						Data Analytics: Looker Studio (Data Studio), Tableau, Power BI, SQL. <br />
 						Contadora Pública. <br /> 
 						<!--<a href="http://www.linkedin.com/in/viviana-ruiz-data-analytics" target="_blank" >linkedin</a>-->
 						<p></p>
